2016-02-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Refactor to make <parts/time.h> and <parts/wchar.h> redundant.

	* include/string.h: Tidy layout.
	(__STRING_H_SOURCED__): New macro; define it at start; delete at end.
	(_stricmp, _strnicmp): Include their prototypes, selectively from...
	* include/strings.h [__STRING_H_SOURCED__]: ...here, reproduce them...
	* include/parts/strings.h: ...from here; file is obsolete; delete it.

	* include/string.h (_wcscmpi): Define alias.
	(wcscat, wcschr, wcscmp, wcscoll, wcscpy, wcscspn, wcslen, wcsncat)
	(wcsncmp, wcsncpy, wcspbrk, wcsrchr, wcsspn, wcsstr, wcstok, wcsxfrm)
	(_wcsdup, _wcsicmp, _wcsicoll, _wcslwr, _wcsnicmp, _wcsnset, _wcsrev)
	(_wcsset, _wcsupr, _wcsncoll, _wcsnicoll, _wcserror, __wcserror)
	(wcscmpi, wcscmpi, wcsdup, wcsicmp, wcsicoll, wcslwr, wcsnicmp)
	(wcsnset, wcsrev, wcsset, wcsupr): Selectively include prototypes...
	* include/wchar.h [__STRING_H_SOURCED__]: ...from here; reproduce...
	* include/parts/wchar.h: ...from here; file is obsolete; delete it.

	* include/strings.h (_STRINGS_H): Do not define it, when...
	[__STRING_H_SOURCED__]: ...selectively included by <string.h>.
	* include/wchar.h (_WCHAR_H) [__STRING_H_SOURCED__]: Likewise.

2016-02-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Refactor to make <parts/time.h> redundant.

	* include/sys/types.h (time_t, __time32_t, __time32_t)
	[__need_time_t && !__have_typedef_time_t]: Reproduce definitions...
	* include/parts/time.h: ...from here; preserve selective exposure.

	* include/time.h (time_t, __time32_t, __time32_t): Get them...
	* include/sys/types.h: ...from here, by selective inclusion.

	* include/time.h (struct timespec, struct __mingw_extended_timespec)
	[__need_struct_timespec && !__struct_timespec_defined]: Reproduce...
	* include/parts/time.h: ...from here; preserve selective exposure.

	* include/parts/time.h: Delete file; it is no longer required.
